Fixed alignment of elements on Course page. Used to be off-center slightly, now fully centered. Will come back to this later to see if centered is what is actually desired

--- a/css/custom.css
+++ b/css/custom.css
@@ -93,3 +93,10 @@ footer ul li {
 #logo:hover {
     text-decoration: none;
 }
+
+
+/* Class for elements that need to be full width*/
+
+.full-width {
+    width: 100%;
+}
